<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/BackGroundImage"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtsn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/song_name"
            android:textAlignment="center"
            android:textColor="@color/lightPurple"
            android:textSize="22sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/MusicLogo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:layout_marginBottom="40dp" />

            <TextView
                android:id="@+id/txtstart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="0:00"
                android:textColor="@color/lightPurple"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtstop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="0:00"
                android:textColor="@color/lightPurple"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/playbtn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/baseline_pause"
                android:contentDescription="@string/play_button_description" />

            <Button
                android:id="@+id/btnnext"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/playbtn"
                android:layout_marginTop="15dp"
                android:background="@drawable/baseline_skip_next"
                android:contentDescription="@string/next_button_description" />

            <Button
                android:id="@+id/btnprev"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_toLeftOf="@id/playbtn"
                android:layout_marginTop="15dp"
                android:background="@drawable/baseline_skip_previous"
                android:contentDescription="@string/previous_button_description" />

            <Button
                android:id="@+id/btnff"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/btnnext"
                android:background="@drawable/baseline_fast_forward"
                android:contentDescription="@string/fast_forward_button_description"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnfr"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@id/btnprev"
                android:background="@drawable/baseline_fast_rewind"
                android:contentDescription="@string/fast_rewind_button_description"
                android:padding="8dp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
